 - added support of encoding parameter for log[] and eventlog[] (Alexei)
 - fixed displaying of Japanese in the Latest Data (Alexei)
 - fixed maintenance of hosts (Alexei)
 - added support of remote agent control (Alexei)
 - support of storage of log files in UTF8 encoding (Alexei)
 - increased size of triggers.expression to 1023 (Alexei)

Changes for 1.4.3:

 - [ZBX-48] fixed server crash if incorrect syntax of aggregate items is used (Alexei)
 - [ZBX-95] fixed patch.sql to work with buggy PHPMyAdmin (Alexei)
 - [ZBX-59] removed button "Switch Node" (Alexei)
 - [ZBX-19] fixed SMS sending (Sasha)
 - [DEV-46] added "save&return" button in acknowledgement (Artem)
 - [DEV-50] Improved incoming parameters exception validation (Artem)
 - [ZBX-92] Distributed monitoring: overwriting new information (Sasha)
 - [DEV-42] Synchronisation of log files (Sasha)
 - [ZBX-90] fixed displaying of last line of a log file in the Latest Data and Overview (Alexei)
 - [ZBX-89] Unused fields:history_lastid, ..str_lastid & ..uint_lastid (Sasha)
 - [ZBX-88] Chenged method to "get" in all forms which affects display info (Artem)
 - [ZBX-80] Master node does not display configuration of slave nodes (Sasha)
 - [ZBX-67] Under DM, Synchronizing binary data between nodes for PostgresSQL (Sasha)
 - [ZBX-77] fixes for refreshing page in Monitoring (Artem)
 - [ZBX-75] fixed problem with occured warning in events (Artem)
 - [ZBX-68] fixed iframe resize on refresh in Screens (Artem)
 - [ZBX-65] fixed sideeffect on massupdate items, 'application' entries are cleaned from all affected items" (Artem)
 - fixed setting trigger status to unknown on trigger update, now only if expression is changed (Artem)
 - fixed problem with Enabling/Disabling actions (Artem)
 - [ZBX-72] fixed occured error after graph refresh (Artem)
 - [ZBX-67] Under DM, Synchronizing binary data between nodes (Sasha)
 - [ZBX-71] added separation of "other" by node and host in "latest data" (Artem)